# DemoImageApplication

./: CMakeLists.txt  README.md
ApplicationCode/: CMakeLists.txt  MiaApplication.cpp  MiaApplication.h  MiaMain.cpp  MimDesignCase.cpp  MimDesignCase.h  MimFilterSettings.cpp  MimFilterSettings.h  MimImage.cpp  MimImage.h  MimProject.cpp  MimProject.h  MiuMainWindow.cpp  MiuMainWindow.h
ApplicationCode/Resources/: MinimalApp.qrc
Fwk/AppFwk/: CMakeLists.txt
Fwk/AppFwk/CommonCode/: CMakeLists.txt  cafEffectGenerator.cpp  cafEffectGenerator.h
Fwk/AppFwk/cafCommand/: CMakeLists.txt  CafCommandSystemSpecification.plantuml  cafAppExecCommandManager.cpp  cafAppExecCommandManager.h  cafCmdAddItemExec.cpp  cafCmdAddItemExec.h  cafCmdAddItemExecData.h  cafCmdAddItemFeature.cpp  cafCmdAddItemFeature.h  cafCmdDeleteItemExec.cpp  cafCmdDeleteItemExec.h  cafCmdDeleteItemExecData.h  cafCmdDeleteItemFeature.cpp  cafCmdDeleteItemFeature.h  cafCmdFieldChangeExec.cpp  cafCmdFieldChangeExec.h  cafCmdSelectionChangeExec.cpp  cafCmdSelectionChangeExec.h  cafCommandFeature.cpp  cafCommandFeature.h  cafCommandFeatureManager.cpp  cafCommandFeatureManager.h  cafCommandFeaturesCore.cpp  cafCommandFeaturesCore.h  cafExecuteCommand.h  cafSelectionManager.cpp  cafSelectionManager.h
Fwk/AppFwk/cafPdmCvf/: CMakeLists.txt  cafPdmFieldCvfMat4d.h  cafPdmFieldCvfVec3d.cpp  cafPdmFieldCvfVec3d.h
Fwk/AppFwk/cafProjectDataModel/: CMakeLists.txt  cafFactory.h  cafPdmDocument.cpp  cafPdmField.cpp  cafPdmField.h  cafPdmField.inl  cafPdmObject.cpp  cafPdmObject.h  cafPdmPointer.h  cafPdmUiEditorHandle.h  cafPdmUiOrdering.h  cafPdmUiTreeOrdering.cpp  cafPdmUiTreeOrdering.h  cafReferenceHelper.cpp  cafReferenceHelper.h
Fwk/AppFwk/cafTests/cafProjectDataModel_UnitTests/: CMakeLists.txt  Parent.cpp  cafPdmBasicTest.cpp
Fwk/AppFwk/cafTests/cafTestApplication/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
Fwk/AppFwk/cafUserInterface/: CMakeLists.txt  cafAboutDialog.cpp  cafAboutDialog.h  cafPdmUiDefaultObjectEditor.cpp  cafPdmUiFieldEditorHandle.cpp  cafPdmUiFieldEditorHandle.h  cafPdmUiLineEditor.cpp  cafPdmUiListViewEditor.cpp  cafPdmUiTableItemEditor.cpp  cafPdmUiTableItemEditor.h  cafPdmUiTableView.cpp  cafPdmUiTableView.h  cafPdmUiTableViewDelegate.cpp  cafPdmUiTableViewDelegate.h  cafPdmUiTableViewEditor.cpp  cafPdmUiTableViewEditor.h  cafPdmUiTableViewModel.cpp  cafPdmUiTableViewModel.h  cafPdmUiTextEditor.cpp  cafPdmUiTreeEditorHandle.h  cafPdmUiTreeView.cpp  cafPdmUiTreeView.h  cafPdmUiTreeViewEditor.cpp  cafPdmUiTreeViewEditor.h  cafPdmUiTreeViewModel.cpp  cafPdmUiTreeViewModel.h
Presentation/: Efficient application development using Qt.pptx
